Project

General

Profile

Actions

Bug #63629

closed

client: handle context completion during async I/O call when the client is not mounting

Added by Dhairya Parmar 6 months ago. Updated 5 months ago.

Status:
Closed
Priority:
Normal
Category:
Correctness/Safety
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
quincy,reef
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

when Client::ll_preadv_pwritev() is called and if the client is not mounting then it would return ENOTCONN but the callback is not finished thus it will stall the caller:

RWRef_t mref_reader(mount_state, CLIENT_MOUNTING);
if (!mref_reader.is_state_satisfied())
  return -CEPHFS_ENOTCONN;

make sure the callback is finished when we return from the function


Related issues 1 (0 open1 closed)

Related to CephFS - Bug #63734: client: handle callback when async io failsResolvedDhairya Parmar

Actions
Actions #1

Updated by Dhairya Parmar 6 months ago

  • Target version set to v19.0.0
  • Source set to Development
  • Backport set to quincy,reef
  • Component(FS) Client added
Actions #2

Updated by Dhairya Parmar 6 months ago

  • Category set to Correctness/Safety
Actions #3

Updated by Dhairya Parmar 6 months ago

  • Pull request ID set to 54651
Actions #4

Updated by Dhairya Parmar 6 months ago

  • Status changed from New to In Progress
  • Assignee set to Dhairya Parmar
Actions #5

Updated by Dhairya Parmar 5 months ago

  • Status changed from In Progress to Closed
Actions #6

Updated by Dhairya Parmar 5 months ago

  • Related to Bug #63734: client: handle callback when async io fails added
Actions

Also available in: Atom PDF