client: make sure the callback is finished when returning ENOTCONN

when the client is not mounted

Fixes: https://tracker.ceph.com/issues/63629
Signed-off-by: Dhairya Parmar <dparmar@redhat.com>